// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadAlbumForm update - with data snapshot 1`] = `
<DocumentFragment>
  <div>
    <form>
      <h2>
        Edit Album
      </h2>
      <div>
        <label
          for="album-name"
        >
          <span>
            Name
          </span>
          <input
            id="album-name"
            type="text"
            value="album-name"
          />
        </label>
        <label
          for="art"
        >
          <span>
            Cover Art
          </span>
          <input
            id="art"
            type="file"
          />
        </label>
      </div>
      <div>
        <h3>
          Edit Songs
        </h3>
        <div
          class="song"
          draggable="true"
        >
          <h4>
            Song 1
          </h4>
          <label
            for="song-name0"
          >
            <span>
              Name
            </span>
            <input
              id="song-name0"
              name="name"
              type="text"
              value="song-1-name"
            />
          </label>
          <label
            for="song-audio0"
          >
            <span
              class="upload-info"
            >
              Audio
            </span>
            <input
              id="song-audio0"
              type="file"
            />
          </label>
          <label
            class="delete-song"
            for="delete-song0"
          >
            <span
              class="upload-info"
            >
              x
            </span>
            <input
              id="delete-song0"
              name="delete"
              type="checkbox"
            />
          </label>
        </div>
        <div
          class="song"
          draggable="true"
        >
          <h4>
            Song 2
          </h4>
          <label
            for="song-name1"
          >
            <span>
              Name
            </span>
            <input
              id="song-name1"
              name="name"
              type="text"
              value="song-2-name"
            />
          </label>
          <label
            for="song-audio1"
          >
            <span
              class="upload-info"
            >
              Audio
            </span>
            <input
              id="song-audio1"
              type="file"
            />
          </label>
          <label
            class="delete-song"
            for="delete-song1"
          >
            <span
              class="upload-info"
            >
              x
            </span>
            <input
              id="delete-song1"
              name="delete"
              type="checkbox"
            />
          </label>
        </div>
        <button
          type="button"
        >
          +
        </button>
      </div>
      <button
        type="submit"
      >
        Save Changes
      </button>
      <button
        type="button"
      >
        Delete Album
      </button>
      <button
        type="button"
      >
        Cancel
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`UploadAlbumForm upload - no data snapshot 1`] = `
<DocumentFragment>
  <div>
    <form>
      <h2>
        Upload Album
      </h2>
      <div>
        <label
          for="album-name"
        >
          <span>
            Name
          </span>
          <input
            id="album-name"
            type="text"
            value=""
          />
        </label>
        <label
          for="art"
        >
          <span>
            Cover Art
          </span>
          <input
            id="art"
            type="file"
          />
        </label>
      </div>
      <div>
        <h3>
          Upload Songs
        </h3>
        <div
          class="song"
          draggable="true"
        >
          <h4>
            Song 1
          </h4>
          <label
            for="song-name0"
          >
            <span>
              Name
            </span>
            <input
              id="song-name0"
              name="name"
              type="text"
              value=""
            />
          </label>
          <label
            for="song-audio0"
          >
            <span
              class="upload-info"
            >
              Audio
            </span>
            <input
              id="song-audio0"
              type="file"
            />
          </label>
          <button
            class="delete-song"
            type="button"
          >
            x
          </button>
        </div>
        <button
          type="button"
        >
          +
        </button>
      </div>
      <button
        type="submit"
      >
        Submit
      </button>
      <button
        type="button"
      >
        Cancel
      </button>
    </form>
  </div>
</DocumentFragment>
`;
